--- a/presentation/index.html
+++ b/presentation/index.html
@@ -227,6 +227,8 @@
             <li class="fragment">
               CQS aims to solve these issues by separating read and write operations and centering code around use-cases
             </li>
+            <li class="fragment">encourages following the open-closed principle</li>
+            <li class="fragment">web APIs become more expressive</li>
             <li class="fragment">different from CQRS</li>
           </ul>
         </section>
