--- a/presentation/index.html
+++ b/presentation/index.html
@@ -80,6 +80,11 @@
           <p>in C#</p>
           <img src="images/baseline_file_tree.png" />
         </section>
+
+        <section>
+          <p>web API</p>
+          <img src="images/baseline_web_api.png" />
+        </section>
       </section>
 
       <section>
@@ -239,6 +244,11 @@
         </section>
 
         <section>
+          <p>web API</p>
+          <img src="images/cqs_web_api.png" />
+        </section>
+
+        <section>
           <p>in C#</p>
           <ul>
             <li class="fragment">each command and query has a dedicated handler</li>
@@ -254,6 +264,7 @@
           <p>MediatR</p>
           <ul>
             <li class="fragment">well-known library</li>
+            <li class="fragment">supports commands and queries (requests) as well as events (notifications)</li>
             <li class="fragment">cross-cutting concerns via behaviors</li>
             <li class="fragment">layer of indirection that makes code difficult to navigate</li>
             <li class="fragment">no distinction between commands and queries</li>
